# heads-i-win-tails-you-lose-cpp-template

./: .gitignore  CMakeLists.txt  main.cpp
src/: coin.cpp  coin.hpp  experiment.cpp  experiment.hpp
tests/: coin_test.cpp  experiment_test.cpp
